update api documentations
