# docs/swagger.yaml
@@ -1,4 +1,84 @@
+definitions:
+  api.ErrorResponse:
+    properties:
+      error:
+        type: string
+    type: object
+  api.updateUserRequest:
+    properties:
+      email:
+        description: built-in
+        maxLength: 50
+        type: string
+      full_name:
+        description: custom tag
+        type: string
+      password:
+        description: built-in tags
+        maxLength: 50
+        minLength: 8
+        type: string
+    type: object
+  api.userResponse:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      full_name:
+        type: string
+      password_changed_at:
+        type: string
+      username:
+        type: string
+    type: object
 info:
   contact: {}
-paths: {}
+paths:
+  /users/{username}:
+    patch:
+      description: Banker can update any user. Depositor can update only their own
+        account.
+      parameters:
+      - description: Username
+        in: path
+        name: username
+        required: true
+        type: string
+      - description: Fields to update
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/api.updateUserRequest'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.userResponse'
+        "400":
+          description: Invalid request or validation error
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "403":
+          description: 'Forbidden: not allowed to update this user'
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "404":
+          description: User not found
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "409":
+          description: 'Conflict: email or username already exists'
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Update user
+      tags:
+      - users
 swagger: "2.0"
